--- a/gb/19/9/29/n11555284.md
+++ b/gb/19/9/29/n11555284.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wlrgim293/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wlrgim293/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wlrgim293/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wlrgim293/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>林辉： 中共70年来党魁的罪恶</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/09/1512040645402039-600x400.jpg" />
 <h6>公开逮捕江泽民已势在必行。（大纪元）
 </h6>
 <hr>
-	<p>【大纪元2019年09月30日讯】中共自1949年建政以来，先后担任其最高领导的中央总书记或相当于总书记地位的有<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>、华国锋、<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E9%82%93%E5%B0%8F%E5%B9%B3.md#1">邓小平</a>、胡耀邦、赵紫阳、<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>、胡锦涛和<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>。其中胡耀邦、赵紫阳时期，最终拍板的实乃掌控军权的邓小平，胡、赵二人也因在理念方面与邓不合，被邓罢免，胡耀邦因心脏病猝死，赵紫阳也在被幽禁中逝去。</p>
-<p>在中共统治中国70年中，掌控权力时间最长的分别是<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>、<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E9%82%93%E5%B0%8F%E5%B9%B3.md#1">邓小平</a>和<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>，毛掌权27年，邓实际掌权超过10年，直至1997年香港回归前死去仍在党内保有余威。而1989年踩着学生鲜血上位的江泽民，连任两任中共总书记，2004年卸任中央军委主席后，利用党内培植的亲信，继续在胡、习任总书记期间干政。可以说，中共70年来犯下的滔天罪恶都与毛、邓、江无法分开，而其他党魁在中共体制的裹挟下，不管是主动还是被动为他们的罪恶背黑锅，其实也在历史上扮演了非常不光彩的角色。</p>
+	<p>【大纪元2019年09月30日讯】中共自1949年建政以来，先后担任其最高领导的中央总书记或相当于总书记地位的有<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>、华国锋、<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%82%93%E5%B0%8F%E5%B9%B3.md#1">邓小平</a>、胡耀邦、赵紫阳、<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>、胡锦涛和<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>。其中胡耀邦、赵紫阳时期，最终拍板的实乃掌控军权的邓小平，胡、赵二人也因在理念方面与邓不合，被邓罢免，胡耀邦因心脏病猝死，赵紫阳也在被幽禁中逝去。</p>
+<p>在中共统治中国70年中，掌控权力时间最长的分别是<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>、<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%82%93%E5%B0%8F%E5%B9%B3.md#1">邓小平</a>和<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>，毛掌权27年，邓实际掌权超过10年，直至1997年香港回归前死去仍在党内保有余威。而1989年踩着学生鲜血上位的江泽民，连任两任中共总书记，2004年卸任中央军委主席后，利用党内培植的亲信，继续在胡、习任总书记期间干政。可以说，中共70年来犯下的滔天罪恶都与毛、邓、江无法分开，而其他党魁在中共体制的裹挟下，不管是主动还是被动为他们的罪恶背黑锅，其实也在历史上扮演了非常不光彩的角色。</p>
 <h2><strong>党魁的杀人历史</strong></h2>
 <p>毛的杀人历史早在中共政权建立及建立苏区根据地时就开始了。毛的杀人历史可分为如下五个阶段：</p>
 <p>第一阶段在苏区和延安。主要指三十年代初发生在中共内部的“肃反”运动和延安整风运动。在肃反运动中，至少有10万红军被杀。而延安整风运动亦有数万人被害。</p>
@@ -42,7 +42,7 @@
 <p>第三、在精神层面上的破坏。在中国的历史上，儒、释、道三家对中国社会产生了巨大的影响，对巩固人类道德水准，对那些想回归天国世界的修炼者起到了重大作用。众所周知，道家讲“真”，佛家讲“善”，儒家讲“忠恕”、“仁义”，而中共通过打倒知识分子，毁坏书籍和庙宇，向人们灌输读书无用论的思想，让人们放弃了对儒、释、道三家的信仰和遵从。宗教与文化的庄严神圣感被破坏殆尽。这直接导致了文革后中国人道德的迅速下滑。</p>
 <p>此外，毛和中共对中国传统社会的破坏主要体现在对农村传统结构的破坏上。中共建政初期，通过煽动农民进行的土地改革，彻底消灭了农村中对社会的稳定和对百姓的教化起着重要作用的的士绅阶层，取而代之成为农村领导人的大多是那些无赖农民。当今农村黑社会化就是文革的恶果。</p>
 <p>邓、江、胡时期，将毛和中共对中国传统文化和道德的破坏，以不同的方式继续推进。在精神层面上，提倡“一切向钱看”；在物质层面上，为了经济建设，继续毁坏古老的建筑，北京被拆除的一座座四合院，就在诉说着这惨痛的历史。至于宗教场所，虽然默许恢复，但教众必须服从于中共的领导。</p>
-<p><ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>上台后，意识到了中国社会道德沦丧到了无以复加的程度，提出了复兴传统文化的主张。然而，其主张却是要将中华传统文化纳入中共的思想范畴予以宣传，要赞美中共所谓的英雄。这对于中共文宣部门，明显是无法完成的任务，因为中共信奉的所谓马列主义与中华传统文化是格格不入的。一旦人们相信了中国传统文化中的儒、释、道思想，中共的执政根基就会坍塌。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>上台后，意识到了中国社会道德沦丧到了无以复加的程度，提出了复兴传统文化的主张。然而，其主张却是要将中华传统文化纳入中共的思想范畴予以宣传，要赞美中共所谓的英雄。这对于中共文宣部门，明显是无法完成的任务，因为中共信奉的所谓马列主义与中华传统文化是格格不入的。一旦人们相信了中国传统文化中的儒、释、道思想，中共的执政根基就会坍塌。</p>
 <p>随着中共内忧外患的加剧，中共再次改变宣传口径，加强了对传统文化的钳制：各地佛教、道教造像纷纷被毁，寺庙、道观、教堂要挂上中共血旗，要举行升旗仪式，学校要按中共口径解释传统文化。中共这样做的目的就是加强对国人的洗脑，让国人丧失独立的思考和判断能力，从而接受中共的宣传。</p>
 <h2><strong>党魁的卖国历史</strong></h2>
 <p>在《中共70年来的卖国黑历史》中，笔者已经历数了毛和江的卖国历史。中国清朝版图的缩小全赖二者所赐。他们在中国历史上成为千夫所指的卖国贼已然是注定。</p>
@@ -58,36 +58,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/12/12/1/n3742510.md#1">胡锦涛从权力巅峰裸退内幕</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/7/20/n8120175.md#1">王友群：江泽民的“三个代表”就是邪教</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/17/4/2/n8993159.md#1">川人：共产党的最高领导人为何都没有好下场？</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/1/19/n10072176.md#1">习近平思想和国家监察委将入宪</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/12/12/1/n3742510.md#1">胡锦涛从权力巅峰裸退内幕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/7/20/n8120175.md#1">王友群：江泽民的“三个代表”就是邪教</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/4/2/n8993159.md#1">川人：共产党的最高领导人为何都没有好下场？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/1/19/n10072176.md#1">习近平思想和国家监察委将入宪</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/28/n10749135.md#1" target="_blank">林辉：邓小平女儿指北大曾变成法西斯集中营</a></li><li><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/17/n11390870.md#1" target="_blank">胡平：20年烈火 法轮功屹立不倒成“真金”</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/1/n11293517.md#1" target="_blank">【征文】林辉：外国名人如此仰慕中华文化</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/18/n11950860.md#1">以色列作家：真正的病毒是中共</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/19/n11953195.md#1">16岁学生致信武汉作家方方 引起轩然大波</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/18/n11949968.md#1">【一线采访】收入见底 武汉人生活陷绝境</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wlrgim293/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wlrgim293/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/29/n11555284.htm">林辉： 中共70年来党魁的罪恶</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/29/n11555284.htm">林辉： 中共70年来党魁的罪恶</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wlrgim293/djy/blob/master/gb/19/9/29/n11555284.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wlrgim293/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wlrgim293/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/9/29/n11555284.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
